apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'view.Main'

// tag::repositories[]
repositories {
    mavenCentral()
}
// end::repositories[]

// tag::jar[]
jar {
    baseName = 'gs-gradle'
    version =  '0.1.0'
}
// end::jar[]

// tag::dependencies[]
sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    testCompile "junit:junit:4.12"
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
}
// end::dependencies[]

// tag::wrapper[]
// end::wrapper[]
